--- a/Elemental-Cuisine/src/index.html
+++ b/Elemental-Cuisine/src/index.html
@@ -17,7 +17,8 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA7j2g8L3aaLrjH8J7EGhA3-FHs_oZqE4w&libraries=places"></script>
+  
+  <script src="https://maps.googleapis.com/maps/api/js?key={KEY}&libraries=places"></script>
 </head>
 
 <body>
